src/chem/_msmarts_Parser.output
Terminals unused in grammar

   APEndOfLine
   APDoubleBond
   APError
   APNegativeFormalCharge
   APPositiveFormalCharge
   APTotalBondNumber
   APTotalExplicitBondNumber


Grammar

    0 $accept: input $end

    1 input: chemInfo

    2 chemInfo: %empty
    3         | atomTest
    4         | atomTest chain

    5 chain: bondAtomTest chain
    6      | branch chain
    7      | bondAtomTest
    8      | branch

    9 bondAtomTest: APBond atomTest
   10             | atomTest

   11 acyclicAtomTest: APOpenBracket logOp APCloseBracket
   12                | APOrganicElement
   13                | APAromaticOrganicElement
   14                | APAliphatic
   15                | APAromatic
   16                | recursiveChemInfo

   17 atomTest: acyclicAtomTest APNumber
   18         | acyclicAtomTest

   19 branch: APOpenParenthesis chain APCloseParenthesis

   20 atomPrimativeTest: APWildCard
   21                  | APDegree
   22                  | APDegree intNumber
   23                  | AM1_BCC_x
   24                  | AM1_BCC_y
   25                  | APTotalHCount
   26                  | APTotalHCount intNumber
   27                  | APImplicitHCount
   28                  | APImplicitHCount intNumber
   29                  | APRingTest APNumber
   30                  | APAliphatic
   31                  | APAromatic
   32                  | APLambda
   33                  | APResidueTest APNumber
   34                  | APRingMembershipCount
   35                  | APRingMembershipCount intNumber
   36                  | APRingSize
   37                  | APRingSize intNumber
   38                  | APValence
   39                  | APValence intNumber
   40                  | APConnectivity
   41                  | APConnectivity intNumber
   42                  | APGroupNumber intNumber
   43                  | APElectronegativeElement
   44                  | APHeavyAtomTotalBond
   45                  | APHeavyAtomTotalBond intNumber
   46                  | APNegativeCharge intNumber
   47                  | APNegativeCharge
   48                  | APNegativeCharge APNegativeCharge
   49                  | APNegativeCharge APNegativeCharge APNegativeCharge
   50                  | APPositiveCharge intNumber
   51                  | APPositiveCharge
   52                  | APPositiveCharge APPositiveCharge
   53                  | APPositiveCharge APPositiveCharge APPositiveCharge
   54                  | APTransitionMetal intNumber
   55                  | APAromaticPiElectron intNumber
   56                  | APPiBondOrbital
   57                  | APAtomicNumber intNumber
   58                  | APChiralityAntiClockwise
   59                  | APChiralityClockwise
   60                  | intNumber
   61                  | APOrganicElement
   62                  | APAromaticOrganicElement
   63                  | APInorganicElement
   64                  | APLonePair
   65                  | APLonePair intNumber
   66                  | recursiveChemInfo

   67 logOp: atomPrimativeTest
   68      | APOperatorNot logOp
   69      | logOp APOperatorAndHigh logOp
   70      | logOp APOperatorOr logOp
   71      | logOp APOperatorAndLow logOp

   72 recursiveChemInfo: APDollarSign APOpenParenthesis chemInfo APCloseParenthesis

   73 intNumber: APNumber


Terminals, with rules where they appear

$end (0) 0
error (256)
APEndOfLine (258)
APBond (259) 9
APAtomicNumber (260) 57
APChiralityAntiClockwise (261) 58
APChiralityClockwise (262) 59
APCloseBracket (263) 11
APCloseParenthesis (264) 19 72
APConnectivity (265) 40 41
APDegree (266) 21 22
APRingTest (267) 29
APResidueTest (268) 33
APDollarSign (269) 72
APDoubleBond (270)
APAliphatic (271) 14 30
APAromatic (272) 15 31
APOrganicElement (273) 12 61
APAromaticOrganicElement (274) 13 62
APInorganicElement (275) 63
APElectronegativeElement (276) 43
APError (277)
APGroupNumber (278) 42
APHeavyAtomTotalBond (279) 44 45
APImplicitHCount (280) 27 28
AM1_BCC_x (281) 23
AM1_BCC_y (282) 24
APLonePair (283) 64 65
APNegativeCharge (284) 46 47 48 49
APNegativeFormalCharge (285)
APNumber (286) 17 29 33 73
APLambda (287) 32
APOpenBracket (288) 11
APOpenParenthesis (289) 19 72
APOperatorAndHigh (290) 69
APOperatorAndLow (291) 71
APOperatorNot (292) 68
APOperatorOr (293) 70
APPiBondOrbital (294) 56
APAromaticPiElectron (295) 55
APPositiveCharge (296) 50 51 52 53
APPositiveFormalCharge (297)
APRingMembershipCount (298) 34 35
APRingSize (299) 36 37
APTotalHCount (300) 25 26
APTotalBondNumber (301)
APTotalExplicitBondNumber (302)
APTransitionMetal (303) 54
APValence (304) 38 39
APWildCard (305) 20


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
input (52)
    on left: 1, on right: 0
chemInfo (53)
    on left: 2 3 4, on right: 1 72
chain (54)
    on left: 5 6 7 8, on right: 4 5 6 19
bondAtomTest (55)
    on left: 9 10, on right: 5 7
acyclicAtomTest (56)
    on left: 11 12 13 14 15 16, on right: 17 18
atomTest (57)
    on left: 17 18, on right: 3 4 9 10
branch (58)
    on left: 19, on right: 6 8
atomPrimativeTest (59)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64 65 66, on right: 67
logOp (60)
    on left: 67 68 69 70 71, on right: 11 68 69 70 71
recursiveChemInfo (61)
    on left: 72, on right: 16 66
intNumber (62)
    on left: 73, on right: 22 26 28 35 37 39 41 42 45 46 50 54 55 57
    60 65


State 0

    0 $accept: . input $end

    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 2
    APAromatic                shift, and go to state 3
    APOrganicElement          shift, and go to state 4
    APAromaticOrganicElement  shift, and go to state 5
    APOpenBracket             shift, and go to state 6

    $default  reduce using rule 2 (chemInfo)

    input              go to state 7
    chemInfo           go to state 8
    acyclicAtomTest    go to state 9
    atomTest           go to state 10
    recursiveChemInfo  go to state 11


State 1

   72 recursiveChemInfo: APDollarSign . APOpenParenthesis chemInfo APCloseParenthesis

    APOpenParenthesis  shift, and go to state 12


State 2

   14 acyclicAtomTest: APAliphatic .

    $default  reduce using rule 14 (acyclicAtomTest)


State 3

   15 acyclicAtomTest: APAromatic .

    $default  reduce using rule 15 (acyclicAtomTest)


State 4

   12 acyclicAtomTest: APOrganicElement .

    $default  reduce using rule 12 (acyclicAtomTest)


State 5

   13 acyclicAtomTest: APAromaticOrganicElement .

    $default  reduce using rule 13 (acyclicAtomTest)


State 6

   11 acyclicAtomTest: APOpenBracket . logOp APCloseBracket

    APAtomicNumber            shift, and go to state 13
    APChiralityAntiClockwise  shift, and go to state 14
    APChiralityClockwise      shift, and go to state 15
    APConnectivity            shift, and go to state 16
    APDegree                  shift, and go to state 17
    APRingTest                shift, and go to state 18
    APResidueTest             shift, and go to state 19
    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 20
    APAromatic                shift, and go to state 21
    APOrganicElement          shift, and go to state 22
    APAromaticOrganicElement  shift, and go to state 23
    APInorganicElement        shift, and go to state 24
    APElectronegativeElement  shift, and go to state 25
    APGroupNumber             shift, and go to state 26
    APHeavyAtomTotalBond      shift, and go to state 27
    APImplicitHCount          shift, and go to state 28
    AM1_BCC_x                 shift, and go to state 29
    AM1_BCC_y                 shift, and go to state 30
    APLonePair                shift, and go to state 31
    APNegativeCharge          shift, and go to state 32
    APNumber                  shift, and go to state 33
    APLambda                  shift, and go to state 34
    APOperatorNot             shift, and go to state 35
    APPiBondOrbital           shift, and go to state 36
    APAromaticPiElectron      shift, and go to state 37
    APPositiveCharge          shift, and go to state 38
    APRingMembershipCount     shift, and go to state 39
    APRingSize                shift, and go to state 40
    APTotalHCount             shift, and go to state 41
    APTransitionMetal         shift, and go to state 42
    APValence                 shift, and go to state 43
    APWildCard                shift, and go to state 44

    atomPrimativeTest  go to state 45
    logOp              go to state 46
    recursiveChemInfo  go to state 47
    intNumber          go to state 48


State 7

    0 $accept: input . $end

    $end  shift, and go to state 49


State 8

    1 input: chemInfo .

    $default  reduce using rule 1 (input)


State 9

   17 atomTest: acyclicAtomTest . APNumber
   18         | acyclicAtomTest .

    APNumber  shift, and go to state 50

    $default  reduce using rule 18 (atomTest)


State 10

    3 chemInfo: atomTest .
    4         | atomTest . chain

    APBond                    shift, and go to state 51
    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 2
    APAromatic                shift, and go to state 3
    APOrganicElement          shift, and go to state 4
    APAromaticOrganicElement  shift, and go to state 5
    APOpenBracket             shift, and go to state 6
    APOpenParenthesis         shift, and go to state 52

    $default  reduce using rule 3 (chemInfo)

    chain              go to state 53
    bondAtomTest       go to state 54
    acyclicAtomTest    go to state 9
    atomTest           go to state 55
    branch             go to state 56
    recursiveChemInfo  go to state 11


State 11

   16 acyclicAtomTest: recursiveChemInfo .

    $default  reduce using rule 16 (acyclicAtomTest)


State 12

   72 recursiveChemInfo: APDollarSign APOpenParenthesis . chemInfo APCloseParenthesis

    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 2
    APAromatic                shift, and go to state 3
    APOrganicElement          shift, and go to state 4
    APAromaticOrganicElement  shift, and go to state 5
    APOpenBracket             shift, and go to state 6

    $default  reduce using rule 2 (chemInfo)

    chemInfo           go to state 57
    acyclicAtomTest    go to state 9
    atomTest           go to state 10
    recursiveChemInfo  go to state 11


State 13

   57 atomPrimativeTest: APAtomicNumber . intNumber

    APNumber  shift, and go to state 33

    intNumber  go to state 58


State 14

   58 atomPrimativeTest: APChiralityAntiClockwise .

    $default  reduce using rule 58 (atomPrimativeTest)


State 15

   59 atomPrimativeTest: APChiralityClockwise .

    $default  reduce using rule 59 (atomPrimativeTest)


State 16

   40 atomPrimativeTest: APConnectivity .
   41                  | APConnectivity . intNumber

    APNumber  shift, and go to state 33

    $default  reduce using rule 40 (atomPrimativeTest)

    intNumber  go to state 59


State 17

   21 atomPrimativeTest: APDegree .
   22                  | APDegree . intNumber

    APNumber  shift, and go to state 33

    $default  reduce using rule 21 (atomPrimativeTest)

    intNumber  go to state 60


State 18

   29 atomPrimativeTest: APRingTest . APNumber

    APNumber  shift, and go to state 61


State 19

   33 atomPrimativeTest: APResidueTest . APNumber

    APNumber  shift, and go to state 62


State 20

   30 atomPrimativeTest: APAliphatic .

    $default  reduce using rule 30 (atomPrimativeTest)


State 21

   31 atomPrimativeTest: APAromatic .

    $default  reduce using rule 31 (atomPrimativeTest)


State 22

   61 atomPrimativeTest: APOrganicElement .

    $default  reduce using rule 61 (atomPrimativeTest)


State 23

   62 atomPrimativeTest: APAromaticOrganicElement .

    $default  reduce using rule 62 (atomPrimativeTest)


State 24

   63 atomPrimativeTest: APInorganicElement .

    $default  reduce using rule 63 (atomPrimativeTest)


State 25

   43 atomPrimativeTest: APElectronegativeElement .

    $default  reduce using rule 43 (atomPrimativeTest)


State 26

   42 atomPrimativeTest: APGroupNumber . intNumber

    APNumber  shift, and go to state 33

    intNumber  go to state 63


State 27

   44 atomPrimativeTest: APHeavyAtomTotalBond .
   45                  | APHeavyAtomTotalBond . intNumber

    APNumber  shift, and go to state 33

    $default  reduce using rule 44 (atomPrimativeTest)

    intNumber  go to state 64


State 28

   27 atomPrimativeTest: APImplicitHCount .
   28                  | APImplicitHCount . intNumber

    APNumber  shift, and go to state 33

    $default  reduce using rule 27 (atomPrimativeTest)

    intNumber  go to state 65


State 29

   23 atomPrimativeTest: AM1_BCC_x .

    $default  reduce using rule 23 (atomPrimativeTest)


State 30

   24 atomPrimativeTest: AM1_BCC_y .

    $default  reduce using rule 24 (atomPrimativeTest)


State 31

   64 atomPrimativeTest: APLonePair .
   65                  | APLonePair . intNumber

    APNumber  shift, and go to state 33

    $default  reduce using rule 64 (atomPrimativeTest)

    intNumber  go to state 66


State 32

   46 atomPrimativeTest: APNegativeCharge . intNumber
   47                  | APNegativeCharge .
   48                  | APNegativeCharge . APNegativeCharge
   49                  | APNegativeCharge . APNegativeCharge APNegativeCharge

    APNegativeCharge  shift, and go to state 67
    APNumber          shift, and go to state 33

    $default  reduce using rule 47 (atomPrimativeTest)

    intNumber  go to state 68


State 33

   73 intNumber: APNumber .

    $default  reduce using rule 73 (intNumber)


State 34

   32 atomPrimativeTest: APLambda .

    $default  reduce using rule 32 (atomPrimativeTest)


State 35

   68 logOp: APOperatorNot . logOp

    APAtomicNumber            shift, and go to state 13
    APChiralityAntiClockwise  shift, and go to state 14
    APChiralityClockwise      shift, and go to state 15
    APConnectivity            shift, and go to state 16
    APDegree                  shift, and go to state 17
    APRingTest                shift, and go to state 18
    APResidueTest             shift, and go to state 19
    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 20
    APAromatic                shift, and go to state 21
    APOrganicElement          shift, and go to state 22
    APAromaticOrganicElement  shift, and go to state 23
    APInorganicElement        shift, and go to state 24
    APElectronegativeElement  shift, and go to state 25
    APGroupNumber             shift, and go to state 26
    APHeavyAtomTotalBond      shift, and go to state 27
    APImplicitHCount          shift, and go to state 28
    AM1_BCC_x                 shift, and go to state 29
    AM1_BCC_y                 shift, and go to state 30
    APLonePair                shift, and go to state 31
    APNegativeCharge          shift, and go to state 32
    APNumber                  shift, and go to state 33
    APLambda                  shift, and go to state 34
    APOperatorNot             shift, and go to state 35
    APPiBondOrbital           shift, and go to state 36
    APAromaticPiElectron      shift, and go to state 37
    APPositiveCharge          shift, and go to state 38
    APRingMembershipCount     shift, and go to state 39
    APRingSize                shift, and go to state 40
    APTotalHCount             shift, and go to state 41
    APTransitionMetal         shift, and go to state 42
    APValence                 shift, and go to state 43
    APWildCard                shift, and go to state 44

    atomPrimativeTest  go to state 45
    logOp              go to state 69
    recursiveChemInfo  go to state 47
    intNumber          go to state 48


State 36

   56 atomPrimativeTest: APPiBondOrbital .

    $default  reduce using rule 56 (atomPrimativeTest)


State 37

   55 atomPrimativeTest: APAromaticPiElectron . intNumber

    APNumber  shift, and go to state 33

    intNumber  go to state 70


State 38

   50 atomPrimativeTest: APPositiveCharge . intNumber
   51                  | APPositiveCharge .
   52                  | APPositiveCharge . APPositiveCharge
   53                  | APPositiveCharge . APPositiveCharge APPositiveCharge

    APNumber          shift, and go to state 33
    APPositiveCharge  shift, and go to state 71

    $default  reduce using rule 51 (atomPrimativeTest)

    intNumber  go to state 72


State 39

   34 atomPrimativeTest: APRingMembershipCount .
   35                  | APRingMembershipCount . intNumber

    APNumber  shift, and go to state 33

    $default  reduce using rule 34 (atomPrimativeTest)

    intNumber  go to state 73


State 40

   36 atomPrimativeTest: APRingSize .
   37                  | APRingSize . intNumber

    APNumber  shift, and go to state 33

    $default  reduce using rule 36 (atomPrimativeTest)

    intNumber  go to state 74


State 41

   25 atomPrimativeTest: APTotalHCount .
   26                  | APTotalHCount . intNumber

    APNumber  shift, and go to state 33

    $default  reduce using rule 25 (atomPrimativeTest)

    intNumber  go to state 75


State 42

   54 atomPrimativeTest: APTransitionMetal . intNumber

    APNumber  shift, and go to state 33

    intNumber  go to state 76


State 43

   38 atomPrimativeTest: APValence .
   39                  | APValence . intNumber

    APNumber  shift, and go to state 33

    $default  reduce using rule 38 (atomPrimativeTest)

    intNumber  go to state 77


State 44

   20 atomPrimativeTest: APWildCard .

    $default  reduce using rule 20 (atomPrimativeTest)


State 45

   67 logOp: atomPrimativeTest .

    $default  reduce using rule 67 (logOp)


State 46

   11 acyclicAtomTest: APOpenBracket logOp . APCloseBracket
   69 logOp: logOp . APOperatorAndHigh logOp
   70      | logOp . APOperatorOr logOp
   71      | logOp . APOperatorAndLow logOp

    APCloseBracket     shift, and go to state 78
    APOperatorAndHigh  shift, and go to state 79
    APOperatorAndLow   shift, and go to state 80
    APOperatorOr       shift, and go to state 81


State 47

   66 atomPrimativeTest: recursiveChemInfo .

    $default  reduce using rule 66 (atomPrimativeTest)


State 48

   60 atomPrimativeTest: intNumber .

    $default  reduce using rule 60 (atomPrimativeTest)


State 49

    0 $accept: input $end .

    $default  accept


State 50

   17 atomTest: acyclicAtomTest APNumber .

    $default  reduce using rule 17 (atomTest)


State 51

    9 bondAtomTest: APBond . atomTest

    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 2
    APAromatic                shift, and go to state 3
    APOrganicElement          shift, and go to state 4
    APAromaticOrganicElement  shift, and go to state 5
    APOpenBracket             shift, and go to state 6

    acyclicAtomTest    go to state 9
    atomTest           go to state 82
    recursiveChemInfo  go to state 11


State 52

   19 branch: APOpenParenthesis . chain APCloseParenthesis

    APBond                    shift, and go to state 51
    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 2
    APAromatic                shift, and go to state 3
    APOrganicElement          shift, and go to state 4
    APAromaticOrganicElement  shift, and go to state 5
    APOpenBracket             shift, and go to state 6
    APOpenParenthesis         shift, and go to state 52

    chain              go to state 83
    bondAtomTest       go to state 54
    acyclicAtomTest    go to state 9
    atomTest           go to state 55
    branch             go to state 56
    recursiveChemInfo  go to state 11


State 53

    4 chemInfo: atomTest chain .

    $default  reduce using rule 4 (chemInfo)


State 54

    5 chain: bondAtomTest . chain
    7      | bondAtomTest .

    APBond                    shift, and go to state 51
    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 2
    APAromatic                shift, and go to state 3
    APOrganicElement          shift, and go to state 4
    APAromaticOrganicElement  shift, and go to state 5
    APOpenBracket             shift, and go to state 6
    APOpenParenthesis         shift, and go to state 52

    $default  reduce using rule 7 (chain)

    chain              go to state 84
    bondAtomTest       go to state 54
    acyclicAtomTest    go to state 9
    atomTest           go to state 55
    branch             go to state 56
    recursiveChemInfo  go to state 11


State 55

   10 bondAtomTest: atomTest .

    $default  reduce using rule 10 (bondAtomTest)


State 56

    6 chain: branch . chain
    8      | branch .

    APBond                    shift, and go to state 51
    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 2
    APAromatic                shift, and go to state 3
    APOrganicElement          shift, and go to state 4
    APAromaticOrganicElement  shift, and go to state 5
    APOpenBracket             shift, and go to state 6
    APOpenParenthesis         shift, and go to state 52

    $default  reduce using rule 8 (chain)

    chain              go to state 85
    bondAtomTest       go to state 54
    acyclicAtomTest    go to state 9
    atomTest           go to state 55
    branch             go to state 56
    recursiveChemInfo  go to state 11


State 57

   72 recursiveChemInfo: APDollarSign APOpenParenthesis chemInfo . APCloseParenthesis

    APCloseParenthesis  shift, and go to state 86


State 58

   57 atomPrimativeTest: APAtomicNumber intNumber .

    $default  reduce using rule 57 (atomPrimativeTest)


State 59

   41 atomPrimativeTest: APConnectivity intNumber .

    $default  reduce using rule 41 (atomPrimativeTest)


State 60

   22 atomPrimativeTest: APDegree intNumber .

    $default  reduce using rule 22 (atomPrimativeTest)


State 61

   29 atomPrimativeTest: APRingTest APNumber .

    $default  reduce using rule 29 (atomPrimativeTest)


State 62

   33 atomPrimativeTest: APResidueTest APNumber .

    $default  reduce using rule 33 (atomPrimativeTest)


State 63

   42 atomPrimativeTest: APGroupNumber intNumber .

    $default  reduce using rule 42 (atomPrimativeTest)


State 64

   45 atomPrimativeTest: APHeavyAtomTotalBond intNumber .

    $default  reduce using rule 45 (atomPrimativeTest)


State 65

   28 atomPrimativeTest: APImplicitHCount intNumber .

    $default  reduce using rule 28 (atomPrimativeTest)


State 66

   65 atomPrimativeTest: APLonePair intNumber .

    $default  reduce using rule 65 (atomPrimativeTest)


State 67

   48 atomPrimativeTest: APNegativeCharge APNegativeCharge .
   49                  | APNegativeCharge APNegativeCharge . APNegativeCharge

    APNegativeCharge  shift, and go to state 87

    $default  reduce using rule 48 (atomPrimativeTest)


State 68

   46 atomPrimativeTest: APNegativeCharge intNumber .

    $default  reduce using rule 46 (atomPrimativeTest)


State 69

   68 logOp: APOperatorNot logOp .
   69      | logOp . APOperatorAndHigh logOp
   70      | logOp . APOperatorOr logOp
   71      | logOp . APOperatorAndLow logOp

    $default  reduce using rule 68 (logOp)


State 70

   55 atomPrimativeTest: APAromaticPiElectron intNumber .

    $default  reduce using rule 55 (atomPrimativeTest)


State 71

   52 atomPrimativeTest: APPositiveCharge APPositiveCharge .
   53                  | APPositiveCharge APPositiveCharge . APPositiveCharge

    APPositiveCharge  shift, and go to state 88

    $default  reduce using rule 52 (atomPrimativeTest)


State 72

   50 atomPrimativeTest: APPositiveCharge intNumber .

    $default  reduce using rule 50 (atomPrimativeTest)


State 73

   35 atomPrimativeTest: APRingMembershipCount intNumber .

    $default  reduce using rule 35 (atomPrimativeTest)


State 74

   37 atomPrimativeTest: APRingSize intNumber .

    $default  reduce using rule 37 (atomPrimativeTest)


State 75

   26 atomPrimativeTest: APTotalHCount intNumber .

    $default  reduce using rule 26 (atomPrimativeTest)


State 76

   54 atomPrimativeTest: APTransitionMetal intNumber .

    $default  reduce using rule 54 (atomPrimativeTest)


State 77

   39 atomPrimativeTest: APValence intNumber .

    $default  reduce using rule 39 (atomPrimativeTest)


State 78

   11 acyclicAtomTest: APOpenBracket logOp APCloseBracket .

    $default  reduce using rule 11 (acyclicAtomTest)


State 79

   69 logOp: logOp APOperatorAndHigh . logOp

    APAtomicNumber            shift, and go to state 13
    APChiralityAntiClockwise  shift, and go to state 14
    APChiralityClockwise      shift, and go to state 15
    APConnectivity            shift, and go to state 16
    APDegree                  shift, and go to state 17
    APRingTest                shift, and go to state 18
    APResidueTest             shift, and go to state 19
    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 20
    APAromatic                shift, and go to state 21
    APOrganicElement          shift, and go to state 22
    APAromaticOrganicElement  shift, and go to state 23
    APInorganicElement        shift, and go to state 24
    APElectronegativeElement  shift, and go to state 25
    APGroupNumber             shift, and go to state 26
    APHeavyAtomTotalBond      shift, and go to state 27
    APImplicitHCount          shift, and go to state 28
    AM1_BCC_x                 shift, and go to state 29
    AM1_BCC_y                 shift, and go to state 30
    APLonePair                shift, and go to state 31
    APNegativeCharge          shift, and go to state 32
    APNumber                  shift, and go to state 33
    APLambda                  shift, and go to state 34
    APOperatorNot             shift, and go to state 35
    APPiBondOrbital           shift, and go to state 36
    APAromaticPiElectron      shift, and go to state 37
    APPositiveCharge          shift, and go to state 38
    APRingMembershipCount     shift, and go to state 39
    APRingSize                shift, and go to state 40
    APTotalHCount             shift, and go to state 41
    APTransitionMetal         shift, and go to state 42
    APValence                 shift, and go to state 43
    APWildCard                shift, and go to state 44

    atomPrimativeTest  go to state 45
    logOp              go to state 89
    recursiveChemInfo  go to state 47
    intNumber          go to state 48


State 80

   71 logOp: logOp APOperatorAndLow . logOp

    APAtomicNumber            shift, and go to state 13
    APChiralityAntiClockwise  shift, and go to state 14
    APChiralityClockwise      shift, and go to state 15
    APConnectivity            shift, and go to state 16
    APDegree                  shift, and go to state 17
    APRingTest                shift, and go to state 18
    APResidueTest             shift, and go to state 19
    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 20
    APAromatic                shift, and go to state 21
    APOrganicElement          shift, and go to state 22
    APAromaticOrganicElement  shift, and go to state 23
    APInorganicElement        shift, and go to state 24
    APElectronegativeElement  shift, and go to state 25
    APGroupNumber             shift, and go to state 26
    APHeavyAtomTotalBond      shift, and go to state 27
    APImplicitHCount          shift, and go to state 28
    AM1_BCC_x                 shift, and go to state 29
    AM1_BCC_y                 shift, and go to state 30
    APLonePair                shift, and go to state 31
    APNegativeCharge          shift, and go to state 32
    APNumber                  shift, and go to state 33
    APLambda                  shift, and go to state 34
    APOperatorNot             shift, and go to state 35
    APPiBondOrbital           shift, and go to state 36
    APAromaticPiElectron      shift, and go to state 37
    APPositiveCharge          shift, and go to state 38
    APRingMembershipCount     shift, and go to state 39
    APRingSize                shift, and go to state 40
    APTotalHCount             shift, and go to state 41
    APTransitionMetal         shift, and go to state 42
    APValence                 shift, and go to state 43
    APWildCard                shift, and go to state 44

    atomPrimativeTest  go to state 45
    logOp              go to state 90
    recursiveChemInfo  go to state 47
    intNumber          go to state 48


State 81

   70 logOp: logOp APOperatorOr . logOp

    APAtomicNumber            shift, and go to state 13
    APChiralityAntiClockwise  shift, and go to state 14
    APChiralityClockwise      shift, and go to state 15
    APConnectivity            shift, and go to state 16
    APDegree                  shift, and go to state 17
    APRingTest                shift, and go to state 18
    APResidueTest             shift, and go to state 19
    APDollarSign              shift, and go to state 1
    APAliphatic               shift, and go to state 20
    APAromatic                shift, and go to state 21
    APOrganicElement          shift, and go to state 22
    APAromaticOrganicElement  shift, and go to state 23
    APInorganicElement        shift, and go to state 24
    APElectronegativeElement  shift, and go to state 25
    APGroupNumber             shift, and go to state 26
    APHeavyAtomTotalBond      shift, and go to state 27
    APImplicitHCount          shift, and go to state 28
    AM1_BCC_x                 shift, and go to state 29
    AM1_BCC_y                 shift, and go to state 30
    APLonePair                shift, and go to state 31
    APNegativeCharge          shift, and go to state 32
    APNumber                  shift, and go to state 33
    APLambda                  shift, and go to state 34
    APOperatorNot             shift, and go to state 35
    APPiBondOrbital           shift, and go to state 36
    APAromaticPiElectron      shift, and go to state 37
    APPositiveCharge          shift, and go to state 38
    APRingMembershipCount     shift, and go to state 39
    APRingSize                shift, and go to state 40
    APTotalHCount             shift, and go to state 41
    APTransitionMetal         shift, and go to state 42
    APValence                 shift, and go to state 43
    APWildCard                shift, and go to state 44

    atomPrimativeTest  go to state 45
    logOp              go to state 91
    recursiveChemInfo  go to state 47
    intNumber          go to state 48


State 82

    9 bondAtomTest: APBond atomTest .

    $default  reduce using rule 9 (bondAtomTest)


State 83

   19 branch: APOpenParenthesis chain . APCloseParenthesis

    APCloseParenthesis  shift, and go to state 92


State 84

    5 chain: bondAtomTest chain .

    $default  reduce using rule 5 (chain)


State 85

    6 chain: branch chain .

    $default  reduce using rule 6 (chain)


State 86

   72 recursiveChemInfo: APDollarSign APOpenParenthesis chemInfo APCloseParenthesis .

    $default  reduce using rule 72 (recursiveChemInfo)


State 87

   49 atomPrimativeTest: APNegativeCharge APNegativeCharge APNegativeCharge .

    $default  reduce using rule 49 (atomPrimativeTest)


State 88

   53 atomPrimativeTest: APPositiveCharge APPositiveCharge APPositiveCharge .

    $default  reduce using rule 53 (atomPrimativeTest)


State 89

   69 logOp: logOp . APOperatorAndHigh logOp
   69      | logOp APOperatorAndHigh logOp .
   70      | logOp . APOperatorOr logOp
   71      | logOp . APOperatorAndLow logOp

    $default  reduce using rule 69 (logOp)


State 90

   69 logOp: logOp . APOperatorAndHigh logOp
   70      | logOp . APOperatorOr logOp
   71      | logOp . APOperatorAndLow logOp
   71      | logOp APOperatorAndLow logOp .

    APOperatorAndHigh  shift, and go to state 79
    APOperatorOr       shift, and go to state 81

    $default  reduce using rule 71 (logOp)


State 91

   69 logOp: logOp . APOperatorAndHigh logOp
   70      | logOp . APOperatorOr logOp
   70      | logOp APOperatorOr logOp .
   71      | logOp . APOperatorAndLow logOp

    APOperatorAndHigh  shift, and go to state 79

    $default  reduce using rule 70 (logOp)


State 92

   19 branch: APOpenParenthesis chain APCloseParenthesis .

    $default  reduce using rule 19 (branch)
